--- a/css/results.css
+++ b/css/results.css
@@ -2,6 +2,21 @@
     text-align: center;
 }
 
+.test{
+    display: flex;
+}
+
+.match{
+    display: flex;
+    background-color: aqua;
+    gap: 10px;
+}
+
+.match-champ-img{
+    max-width: 5em;
+    max-height: 5em;
+}
+
 .grid-container{
     display: grid;
     grid-template-columns: [col1] 25% [col2] auto [col3] 5%;
