--- a/css/results.css
+++ b/css/results.css
@@ -2,13 +2,12 @@
     text-align: center;
 }
 
-.test{
-    display: flex;
+body{
+    background-color: lightgray;
 }
 
 .match{
     display: flex;
-    background-color: aqua;
     gap: 10px;
 }
 
@@ -24,11 +23,9 @@
     gap: 10px;
     margin-left: 15%;
     margin-right: 15%;
-    border: 2px red solid;
 }
 
 .grid-summonericon{
-    border: 2px red solid;
     grid-column-start: col1;
     grid-column-end: col2;
     grid-row-start: row1;
@@ -43,7 +40,6 @@
 }
 
 .grid-summonerinfo{
-    border: 2px red solid;
     grid-column-start: col2;
     grid-column-end: col3;
     grid-row-start: row1;
@@ -52,7 +48,6 @@
 }
 
 .grid-matchhistory{
-    border: 2px red solid;
     grid-column-start: col1;
     grid-column-end: col3;
     grid-row-start: row2;
