--- a/css/results.css
+++ b/css/results.css
@@ -1,11 +1,16 @@
+:root{
+    --main-color: rgb(18, 21, 32);
+    --secondary-color: rgb(245, 245, 245);
+}
+
 #greeting{
     text-align: center;
 }
 
 body{
     font-family: 'Roboto Mono', monospace;
-    background-color: rgb(18, 21, 32);
-    color: whitesmoke;
+    background-color: var(--main-color);
+    color: var(--secondary-color);
 }
 
 .footer{
@@ -15,13 +20,13 @@ body{
 }
 
 a{
-    color: whitesmoke;
+    color: var(--secondary-color);
     text-decoration: none;
 }
 
 .match{
     display: grid;
-    grid-template-columns: 5em 3fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 5em 8em 1fr 1fr 1fr 1fr;
     gap: 10px;
     margin-bottom: 10px;
 }
@@ -45,13 +50,11 @@ a{
     grid-column-end: col2;
     grid-row-start: row1;
     grid-row-end: row2;
-    margin-top: auto;
-    margin-left: auto;
+    place-items: center;
 }
 
 .grid-summonericon .summonericon{
     max-width: 100%;
-    max-height: 100%;
 }
 
 .grid-summonerinfo{
