--- a/css/results.css
+++ b/css/results.css
@@ -1,6 +1,8 @@
 :root{
     --main-color: rgb(18, 21, 32);
     --secondary-color: rgb(245, 245, 245);
+    --lose: rgb(249, 67, 72);
+    --win: rgb(74, 203, 138);
 }
 
 #greeting{
@@ -11,6 +13,26 @@ body{
     font-family: 'Roboto Mono', monospace;
     background-color: var(--main-color);
     color: var(--secondary-color);
+}
+
+.win-true{
+    border: 3px solid var(--win);
+    border-radius: 5px;
+    transition: 150ms ease-in-out;
+}
+
+.win-true:hover{
+    background-color: var(--win);
+}
+
+.win-false{
+    border: 3px solid var(--lose);
+    border-radius: 5px;
+    transition: 150ms ease-in-out;
+}
+
+.win-false:hover{
+    background-color: var(--lose);
 }
 
 .footer{
