--- a/css/results.css
+++ b/css/results.css
@@ -5,6 +5,26 @@
     --win: rgb(74, 203, 138);
 }
 
+
+.footer{
+    display: grid;
+    place-items: center;
+    height: 5vh;
+    opacity: 25%;
+    background-color: black;
+    margin-top: 2em;
+}
+
+.header{
+    margin: 0;
+    display: grid;
+    place-items: center;
+    height: 5vh;
+    opacity: 25%;
+    background-color: black;
+    margin-bottom: 2em;
+}
+
 #greeting{
     text-align: center;
 }
@@ -13,6 +33,7 @@ body{
     font-family: 'Roboto Mono', monospace;
     background-color: var(--main-color);
     color: var(--secondary-color);
+    margin: 0;
 }
 
 .win-true{
@@ -35,11 +56,6 @@ body{
     background-color: var(--lose);
 }
 
-.footer{
-    display: grid;
-    place-items: center;
-    height: 5vh;
-}
 
 a{
     color: var(--secondary-color);
