--- a/css/root.css
+++ b/css/root.css
@@ -18,6 +18,14 @@
     margin-top: 2em;
 }
 
+.footer *{
+    opacity: 50%;
+}
+
+.header *{
+    opacity: 50%;
+}
+
 .header{
     display: grid;
     place-items: center;
