--- a/css/results.css
+++ b/css/results.css
@@ -4,9 +4,23 @@
 
 body{
     font-family: 'Roboto Mono', monospace;
-    background-color: var(--main-color);
+    background-color: var(--main-color-low-lum);
     color: var(--secondary-color);
     margin: 0;
+}
+
+button{
+    color: var(--secondary-color);
+    background-color: var(--main-color-high-lum);
+    border: 0;
+    border-radius: 5px;
+    padding: 0.5em;
+    transition: 150ms ease-in-out;
+}
+
+button:hover{
+    background-color: var(--secondary-color);
+    color: var(--main-color);
 }
 
 .win-true{
@@ -16,7 +30,7 @@ body{
 }
 
 .win-true:hover{
-    background-color: var(--win);
+    background-color: var(--win-low-opa);
 }
 
 .win-false{
@@ -26,9 +40,19 @@ body{
 }
 
 .win-false:hover{
-    background-color: var(--lose);
+    background-color: var(--lose-low-opa);
 }
 
+.more-games{
+    width: auto;
+    padding: 1em;
+}
+
+.more-games-wraper{
+    display: grid;
+    place-items: center;
+    height: fit-content;
+}
 
 a{
     color: var(--secondary-color);
@@ -48,37 +72,30 @@ a{
 }
 
 .grid-container{
+    background-color: var(--main-color);
     display: grid;
-    grid-template-columns: [col1] 25% [col2] auto [col3] 5%;
-    grid-template-rows: [row1] 1fr [row2] auto [row3] 5%;
+    grid-template-columns: auto;
+    grid-template-rows: 1fr auto 2em;
     gap: 10px;
-    margin-left: 15%;
-    margin-right: 15%;
+    padding: 1.5em;
+    padding-left: 15%;
+    padding-right: 15%;
 }
 
-.grid-summonericon{
-    grid-column-start: col1;
-    grid-column-end: col2;
-    grid-row-start: row1;
-    grid-row-end: row2;
-    place-items: center;
-}
-
-.grid-summonericon .summonericon{
-    max-width: 100%;
+.summonericon{
+    max-width: 15em;
+    display: inline;
 }
 
 .grid-summonerinfo{
-    grid-column-start: col2;
-    grid-column-end: col3;
-    grid-row-start: row1;
-    grid-row-end: row2;
+    display: flex;
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 1;
     padding: 10px;
+    gap: 1em;
 }
 
 .grid-matchhistory{
-    grid-column-start: col1;
-    grid-column-end: col3;
-    grid-row-start: row2;
-    grid-row-end: row3;
+    grid-column: 1 / span 1;
+    grid-row: 2 / span 1;
 }
