--- a/css/root.css
+++ b/css/root.css
@@ -5,6 +5,8 @@
     --secondary-color: hsl(0, 0%, 96%);
     --lose: hsl(358, 94%, 62%);
     --win: hsl(150, 49%, 59%);
+    --lose-low-opa: hsla(358, 94%, 62%, 0.75);
+    --win-low-opa: hsl(150, 49%, 59%, 0.75);
     --red-side: hsl(358, 94%, 62%);
     --blue-side: hsl(196, 93%, 60%);
     --ban-img-width: 2em
