--- a/css/results.css
+++ b/css/results.css
@@ -2,6 +2,16 @@
     text-align: center;
 }
 
+.wins{
+    color: var(--win);
+}
+.loses{
+    color: var(--lose);
+}
+.deaths{
+    color: var(--lose);
+}
+
 body{
     font-family: 'Roboto Mono', monospace;
     background-color: var(--main-color-low-lum);
