--- a/css/results.css
+++ b/css/results.css
@@ -112,7 +112,8 @@ a{
 }
 
 .summonericon{
-    max-width: 15em;
+    max-width: 100%;
+    max-height: 100%;
     display: inline;
     border-radius: 1em;
     border: 0.4em solid var(--main-color-low-lum);
